# NDIReceive

./: CMakeLists.txt  LICENSE  README.md  sampleUsage.mkv
src/: CMakeLists.txt  NDIDeleters.h  TestNDIDeleters.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
